# CyberCypher

./: package-lock.json
cyber-cypher/: .gitignore  MIN_ACTION_FREQUENCY_FINAL.md  README.md  continuous_stream_config.yaml  demo_continuous_stream.py  demo_kafka_agent.py  demo_kafka_producer.py  docker-compose.yml  pyproject.toml  run_agent.py
cyber-cypher/.payops_logs/: audit_20260201.jsonl
cyber-cypher/.payops_state/: current_state.json
cyber-cypher/.payops_state/backups/: state_20260201_115334_064305.json  state_20260201_115342_134888.json  state_20260201_115350_151564.json  state_20260201_115358_170353.json  state_20260201_115406_218566.json  state_20260201_115414_365970.json  state_20260201_115422_403892.json  state_20260201_115430_470456.json  state_20260201_115438_522510.json  state_20260201_115446_583672.json  state_20260201_123102_943387.json  state_20260201_123110_992653.json  state_20260201_123119_055322.json  state_20260201_123127_064906.json  state_20260201_123135_120417.json  state_20260201_123143_188779.json  state_20260201_123151_292736.json  state_20260201_123159_351617.json  state_20260201_123207_394253.json  state_20260201_123215_400655.json
cyber-cypher/payops_ai/: __init__.py  config.py  orchestrator.py
cyber-cypher/payops_ai/action/: __init__.py  executor.py  pre_mortem.py
cyber-cypher/payops_ai/decision/: __init__.py  nrv_calculator.py  planner.py  policy.py
cyber-cypher/tests/: __init__.py  conftest.py  test_action.py  test_decision.py  test_learning.py  test_models.py  test_observation.py  test_reasoning.py
frontend/: README.md  (+2 more)
(+98 files in other folders)
