[tool.poetry]
name = "payops-ai"
version = "0.1.0"
description = "Agentic AI for Smart Payment Operations"
authors = ["PayOps Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.0"
hypothesis = "^6.92.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
requests = "^2.31.0"
kafka-python = "^2.0.2"
websockets = "^11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.0"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
